plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'training'
version = '0.0.1-SNAPSHOT'
description = 'StudentManagement03System'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

	// Spring Boot
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// Thymeleaf
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// OpenAPI Generator
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'

	// Apache Commons Lang（便利機能）
	implementation 'org.apache.commons:commons-lang3:3.19.0'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// MySQLドライバ
	runtimeOnly 'com.mysql:mysql-connector-j:9.4.0'

	// MyBatis
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.5'

	// APサーバー
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

	// SpringBoot Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// MyBatis Test
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.5'

	// H2(InMemoryDB)
	testImplementation 'com.h2database:h2:2.4.240'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
